added about page, fixed privacy, terms pages

--- a/pages/about.html
+++ b/pages/about.html
@@ -8,7 +8,7 @@
     <title>Xive Studios</title>
     <!-- UIkit CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.3/css/uikit.min.css" />
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 
 <body>
@@ -17,7 +17,7 @@
             <div class="uk-grid-small uk-child-width-expand@s uk-text-center" uk-grid>
                 <div>
                     <div class="uk-padding">
-                        <img src="img/XIVE.png" class="uk-height-medium" alt="Xive Studios Logo">
+                        <img src="../img/XIVE.png" class="uk-height-small" alt="Xive Studios Logo">
                         <h1 class="uk-text-center uk-logo">Xive Studios</h1>
                     </div>
                 </div>
@@ -29,16 +29,23 @@
         <div class="uk-navbar-center">
 
             <ul class="uk-navbar-nav">
-                <li class="uk-active"><a href="#">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="#">Long Lang</a></li>
-                <li><a href="./pages/about.html">About</a></li>
-                <li><a href="./pages/privacy.html">Privacy</a></li>
+                <li class="uk-active"><a href="#">About</a></li>
+                <li><a href="privacy.html">Privacy</a></li>
             </ul>
 
         </div>
     </div>
 
     <div class="uk-container">
+        <article class="uk-article uk-padding">
+            <h2>About</h2>
+            <p>Xive Studio is a small Indie Game Development Studio.</p>
+            <p><strong>Contact Us</strong></p>
+            <p>Email : xive.studios@gmail.com</p>
+            <hr>
+        </article>
     </div>
 
 
