--- a/pages/privacy.html
+++ b/pages/privacy.html
@@ -31,7 +31,7 @@
             <ul class="uk-navbar-nav">
                 <li ><a href="../index.html">Home</a></li>
                 <li><a href="#">Long Lang</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="about.html">About</a></li>
                 <li class="uk-active"><a href="#">Privacy</a></li>
             </ul>
 
@@ -41,7 +41,7 @@
     <div class="uk-container">
         <article class="uk-article uk-padding">
             <h2>Privacy Policy</h2>
-            <p> built the Long Land app as an Ad Supported app. This SERVICE is provided by
+            <p> built the Long Land mobile game as an Ad Supported mobile game. This SERVICE is provided by
                 at no cost and is intended for use as is.
             </p>
             <p>This page is used to inform visitors regarding my policies with the collection, use, and disclosure
@@ -61,9 +61,9 @@
                 is
                 not collected by me in any way.
             </p>
-            <p>The app does use third party services that may collect information used to identify you.</p>
+            <p>The mobile game does use third party services that may collect information used to identify you.</p>
             <div>
-                <p>Link to privacy policy of third party service providers used by the app</p>
+                <p>Link to privacy policy of third party service providers used by the mobile game</p>
                 <ul>
                     <li><a href="https://www.google.com/policies/privacy/" target="_blank">Google Play Services</a></li>
                     <li><a href="https://support.google.com/admob/answer/6128543?hl=en" target="_blank">AdMob</a></li>
@@ -79,10 +79,10 @@
             </div>
             <p><strong>Log Data</strong></p>
             <p> I want to inform you that whenever you use my Service, in a case of
-                an error in the app I collect data and information (through third party products) on your phone
+                an error in the mobile game I collect data and information (through third party products) on your phone
                 called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”)
                 address,
-                device name, operating system version, the configuration of the app when utilizing my Service,
+                device name, operating system version, the configuration of the mobile game when utilizing my Service,
                 the time and date of your use of the Service, and other statistics.
             </p>
             <p><strong>Cookies</strong></p>
@@ -91,7 +91,7 @@
                 internal
                 memory.
             </p>
-            <p>This Service does not use these “cookies” explicitly. However, the app may use third party code and
+            <p>This Service does not use these “cookies” explicitly. However, the mobile game may use third party code and
                 libraries that use “cookies” to collect information and improve their services. You have the option to
                 either accept or refuse these cookies and know when a cookie is being sent to your device. If you
                 choose
