--- a/pages/privacy.html
+++ b/pages/privacy.html
@@ -41,7 +41,7 @@
     <div class="uk-container">
         <article class="uk-article uk-padding">
             <h2>Privacy Policy</h2>
-            Xive Studios built the Long Land app as
+            <p>Xive Studios built the Long Land app as
                   a Free app. This SERVICE is provided by
                   Xive Studios at no cost and is intended for use as
                   is.
